--- a/src/components/RandomNumberGenerator/index.css
+++ b/src/components/RandomNumberGenerator/index.css
@@ -6,16 +6,31 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding: 20px;
 }
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(100, 100, 111, 0.562) 0px 7px 29px 0px;
+  width: 100%;
+  max-width: 500px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
 .heading {
   color: #0b69ff;
   font-size: 25px;
   text-align: center;
+  margin-top: 45px;
 }
 
 .note-message {
   font-size: 15px;
   text-align: center;
+  font-weight: 400;
   padding-bottom: 10px;
 }
 
